# the-rust-ark

./: Cargo.toml  app_data.db  entries.db  output.txt
src/: main.rs
