[package]
name = "test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.8.1"
rusqlite = "0.26.0"
chrono = { version = "0.4", features = ["serde"] }
im = "15.0.0"  # Check for the latest version on crates.io